# ESP32_WROOM_hardware_testbench

./: .gitignore  CMakeLists.txt  ESP32_WROOM_hardware_testbench.code-workspace  LICENSE  README.md  platformio.ini  sdkconfig
components-third-party/LGFX_setup/: CMakeLists.txt  LGFX_setup.cpp
components-third-party/LGFX_setup/inc/: LGFX_setup.hpp
components-third-party/PCA9685/: CMakeLists.txt  pca9685.c
components-third-party/PCA9685/inc/: pca9685.h
components-third-party/esp_idf_lib_helpers/: CMakeLists.txt
components-third-party/i2cdev/: CMakeLists.txt
components-third-party/i2cdev/inc/: i2cdev.h
components/RotaryEncoder/: CMakeLists.txt  RotaryEncoder.cpp
components/RotaryEncoder/inc/: RotaryEncoder.hpp
components/vl53l0x/: CMakeLists.txt  vl53l0x.c  vl53l0x_old_i2c.c
components/vl53l0x/inc/: vl53l0x.h
include/: main.hpp
src/: CMakeLists.txt  main.cpp
